Unit 4 google fonts Noto Sans

--- a/css/main.css
+++ b/css/main.css
@@ -6,7 +6,9 @@ body {
  	text-align: center;
   	background-image: url("main_tree.jpg");
   	background-size: cover;
-  	font-family: Helvetica;
+  	font-family: 'Noto Sans', sans-serif;
+  	/* font-family: 'Raleway', sans-serif; */
+  	/*font-family: Helvetica; */
 }
 
 hr {
